# 3DGame-Practice

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Doxyfile  README.md
App/: CMakeLists.txt
App/src/: BasicLayer.cpp  BasicLayer.h  main.cpp
Core/: CMakeLists.txt
Core/src/Core/: Application.cpp  Application.h  Layer.cpp  Layer.h  Window.cpp  Window.h
